Change Button name

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <br>
           <hr>
           <br>
-          <input id="btnEndPractice" type="button" value="结束练习"/>
+          <input id="btnEndPractice" type="button" value="统计信息"/>
         </td>
       </tr>
     </table>
