--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <title>小学数学计算测试</title>
-    <script src="js/jquery-2.2.3.min.js" type="text/javascript"></script>
-    <script src="js/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="js/vendor/jquery.ui.widget.js"></script>
-    <script src="js/jquery.iframe-transport.js"></script>
-    <script src="js/bootstrap.js" type="text/javascript"></script>
+    <script src="jquery-ui-1.12.1/external/jquery/jquery.js" type="text/javascript"></script>
+    <script src="jquery-ui-1.12.1/jquery-ui.min.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
+    <link href="jquery-ui-1.12.1/jquery-ui.css" rel="stylesheet"/>
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/jquery-ui.css" rel="stylesheet"/>
     <link href="data:text/css;charset=utf-8," rel="stylesheet" data-href="css/bootstrap-theme.min.css"
           id="bs-theme-stylesheet"/>
     <script type="text/javascript">
@@ -17,6 +14,12 @@
             initUI();
         });
     </script>
+    <style type="text/css">
+      input[type=button] {
+        width:100%;
+        height: 50px;
+      }
+    </style>
   </head>
   <body>
     <table style="height:300px;width:100%">
@@ -46,8 +49,14 @@
     </table>
 
     <div id="divStatus" title="本次练习统计信息">
-      作对的：<div id="txtAllRightQuestions"></div>
-      作错的：<div id="txtAllWrongQuestions"></div>
+      <table border="1">
+        <tr>
+          <td>作对的题</td><td>做错的题</td>
+        </tr><tr>
+          <td><div id="txtAllRightQuestions"></div></td>
+          <td><div id="txtAllWrongQuestions"></div></td>
+        </tr>
+      </table>
       <div id="timeExpend">耗时:</div>
     </div>
 
